--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,12 @@
 	},
 	"autoload-dev" : {
         "psr-4" : {
-            "Goetas\\SoapReader\\Tests\\" : "tests/"
+            "PhpWebservices\\SoapReader\\Tests\\" : "tests/"
         }
     },
 	"autoload" : {
 		"psr-4" : {
-			"Goetas\\SoapReader\\" : "src/"
+			"PhpWebservices\\SoapReader\\" : "src/"
 		}
 	},
 	"extra" : {
