--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,36 @@
 {
-	"name" : "php-webservices/soap-reader",
+	"name" : "goetas-webservices/soap-reader",
 	"description" : "SOAP reader",
 	"type" : "library",
 	"authors" : [{
 			"name" : "Asmir Mustafic"
 		}
 	],
-	"minimum-stability":"dev",
+	"minimum-stability" : "dev",
 	"keywords" : [
 		"converter",
 		"xml",
 		"xsd",
 		"php",
-		"jms",
-		"serializer"
+		"soap"
 	],
 	"license" : "MIT",
 	"require" : {
 		"php" : "~5.4",
-		"php-webservices/wsdl-reader" : "~0.1",
-		"php-webservices/xsd-reader" : "~0.1"
+		"goetas-webservices/wsdl-reader" : "~0.1",
+		"goetas-webservices/xsd-reader" : "~0.1"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "~4.0"
 	},
 	"autoload-dev" : {
         "psr-4" : {
-            "PhpWebservices\\SoapReader\\Tests\\" : "tests/"
+            "GoetasWebservices\\SOAPReader\\Tests\\" : "tests/"
         }
     },
 	"autoload" : {
 		"psr-4" : {
-			"PhpWebservices\\SoapReader\\" : "src/"
+			"GoetasWebservices\\SOAPReader\\" : "src/"
 		}
 	},
 	"extra" : {
