--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,12 @@
 	},
 	"autoload-dev" : {
         "psr-4" : {
-            "GoetasWebservices\\SOAPReader\\Tests\\" : "tests/"
+            "GoetasWebservices\\XML\\SOAPReader\\Tests\\" : "tests/"
         }
     },
 	"autoload" : {
 		"psr-4" : {
-			"GoetasWebservices\\SOAPReader\\" : "src/"
+			"GoetasWebservices\\XML\\SOAPReader\\" : "src/"
 		}
 	},
 	"extra" : {
