--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,27 @@
 language: php
+sudo: false
 
 php:
   - 5.4
   - 5.5
   - 5.6
+  - hhvm
+
+cache:
+  directories:
+    - vendor
+    - $HOME/.composer/cache
 
 before_script:
-  - composer install --prefer-dist --dev
+  - if [[ $TRAVIS_PHP_VERSION = '5.6' ]]; then echo "xdebug.max_nesting_level=1000" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; fi
+  - if [[ $TRAVIS_PHP_VERSION = '5.6' ]]; then PHPUNIT_FLAGS="--coverage-clover=coverage.clover"; else PHPUNIT_FLAGS=""; fi
+  - if [[ $TRAVIS_PHP_VERSION != '5.6' ]]; then phpenv config-rm xdebug.ini; fi
+  - travis_retry composer self-update
+  - travis_retry composer update $COMPOSER_FLAGS
 
-script: vendor/bin/phpunit --coverage-clover=coverage.clover
+script: vendor/bin/phpunit $PHPUNIT_FLAGS
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+  - if [[ $TRAVIS_PHP_VERSION = '5.6' ]] ; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
+
