--- a/composer.json
+++ b/composer.json
@@ -1,43 +1,41 @@
 {
-	"name" : "goetas-webservices/soap-reader",
-	"description" : "SOAP reader",
-	"type" : "library",
-	"authors" : [{
-			"name" : "Asmir Mustafic"
-		}
-	],
-	"minimum-stability" : "dev",
-	"keywords" : [
-		"converter",
-		"xml",
-		"xsd",
-		"php",
-		"soap"
-	],
-	"minimum-stability": "dev",
-	"prefer-stable": true,
-	"license" : "MIT",
-	"require" : {
-		"php" : "~5.4",
-		"goetas-webservices/wsdl-reader" : "~0.1",
-		"goetas-webservices/xsd-reader" : "~0.1"
-	},
-	"require-dev" : {
-		"phpunit/phpunit" : "~4.0"
-	},
-	"autoload-dev" : {
-        "psr-4" : {
-            "GoetasWebservices\\XML\\SOAPReader\\Tests\\" : "tests/"
-        }
-    },
-	"autoload" : {
-		"psr-4" : {
-			"GoetasWebservices\\XML\\SOAPReader\\" : "src/"
-		}
-	},
-	"extra" : {
-		"branch-alias" : {
-			"dev-master" : "0.1-dev"
-		}
-	}
+  "name": "goetas-webservices/soap-reader",
+  "description": "SOAP reader",
+  "type": "library",
+  "authors": [
+    {
+      "name": "Asmir Mustafic"
+    }
+  ],
+  "keywords": [
+    "converter",
+    "xml",
+    "xsd",
+    "php",
+    "soap"
+  ],
+  "license": "MIT",
+  "require": {
+    "php": "~5.4",
+    "goetas-webservices/wsdl-reader": "^0.1",
+    "goetas-webservices/xsd-reader": "^0.1"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^4.8|^5.0"
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "GoetasWebservices\\XML\\SOAPReader\\Tests\\": "tests/"
+    }
+  },
+  "autoload": {
+    "psr-4": {
+      "GoetasWebservices\\XML\\SOAPReader\\": "src/"
+    }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "0.1-dev"
+    }
+  }
 }
