--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "~5.4",
+    "php": "^5.4||^7.0",
     "goetas-webservices/wsdl-reader": "^0.2",
     "goetas-webservices/xsd-reader": "^0.1"
   },
