--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^5.4||^7.0",
+    "php": "^7.1",
     "goetas-webservices/wsdl-reader": "^0.3"
   },
   "require-dev": {
